<resources>
    <string name="gcm_sender_id" translatable="false"></string>

    <string name="com_parse_ui_logo_content_description" translatable="false">Logo</string>
    <string name="com_parse_ui_progress_dialog_text">Loading…</string>
    <string name="com_parse_ui_username_input_hint">Username</string>
    <string name="com_parse_ui_password_input_hint">Password</string>
    <string name="com_parse_ui_parse_login_button_label">Log in</string>
    <string name="com_parse_ui_parse_signup_button_label">Sign Up</string>
    <string name="com_parse_ui_facebook_login_button_label">Log in with Facebook</string>
    <string name="com_parse_ui_email_input_hint">Email</string>
    <string name="com_parse_ui_confirm_password_input_hint">Re-enter password</string>
    <string name="com_parse_ui_name_input_hint">Name</string>
    <string name="com_parse_ui_create_account_button_label">Create account</string>
    <string name="com_parse_ui_no_username_toast">Please enter your username</string>
    <string name="com_parse_ui_no_password_toast">Please enter your password</string>
    <string name="com_parse_ui_parse_login_invalid_credentials_toast" translatable="false">The username and password you entered don\'t match</string>
    <string name="com_parse_ui_parse_login_failed_unknown_toast" translatable="false">Could not log in, please try again later</string>
    <string name="com_parse_ui_facebook_login_failed_toast">Facebook login failed</string>

    <string name="com_parse_ui_select_gender">Gender</string>
    <string-array name="gender">
        <item>Unspecified</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <plurals name="com_parse_ui_password_too_short_toast">
        <item quantity="one">Password must be at least %d character long</item>
        <item quantity="other">Password must be at least %d characters long</item>
    </plurals>

    <string name="com_parse_ui_username_taken_toast">Username is already taken, please choose a different one</string>
    <string name="com_parse_ui_reenter_password_toast">Please re-enter your password</string>
    <string name="com_parse_ui_mismatch_confirm_password_toast">Passwords don\'t match, please try again</string>
    <string name="com_parse_ui_no_email_toast">Please enter your email</string>
    <string name="com_parse_ui_email_taken_toast">Email is already taken, please choose a different one</string>
    <string name="com_parse_ui_no_name_toast">Please enter your name</string>
    <string name="com_parse_ui_signup_failed_unknown_toast">Could not sign up, please try again later</string>
    <string name="com_parse_ui_login_help_instructions">Enter your email to recover your password</string>
    <string name="com_parse_ui_login_help_email_input_hint">Email</string>
    <string name="com_parse_ui_login_help_submit_button_label">Submit</string>
    <string name="com_parse_ui_login_help_login_again_button_label">Back to Login</string>
    <string name="com_parse_ui_login_help_submit_failed_unknown">Failed to request password reset, please try again</string>
    <string name="com_parse_ui_login_help_email_sent">Please check your email for instructions on how to access your account</string>

    <string name="com_parse_ui_login_warning_layout_missing_username_field" translatable="false">Layout missing username field</string>
    <string name="com_parse_ui_login_warning_layout_missing_password_field" translatable="false">Layout missing password field</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_button" translatable="false">Layout missing login button</string>
    <string name="com_parse_ui_login_warning_layout_missing_signup_button" translatable="false">Layout missing signup button</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_help_button" translatable="false">Layout missing login help button</string>
    <string name="com_parse_ui_login_warning_disabled_username_password_login" translatable="false">Disabled username/password login and signup because of missing layout elements</string>
    <string name="com_parse_ui_login_warning_disabled_facebook_login" translatable="false">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="com_parse_ui_login_warning_disabled_twitter_login" translatable="false">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="com_parse_ui_login_warning_parse_login_failed" translatable="false">"Parse username/password login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_failed" translatable="false">"Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_failed" translatable="false">"Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_user_update_failed" translatable="false">"Updating user object after Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_user_update_failed" translatable="false">"Updating user object after Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_parse_signup_failed" translatable="false">"Parse signup failed, exception: "</string>
    <string name="com_parse_ui_login_warning_password_reset_failed" translatable="false">"Parse password reset failed, exception: "</string>
    <string name="com_parse_ui_twitter_login_button_label" translatable="false">Login with Twitter</string>
    <string name="com_parse_ui_twitter_login_failed_toast" translatable="false">Twitter login failed</string>

    <string name="com_parse_ui_login_dispatch_user_logged_in" translatable="false">"User logged in, starting: "</string>
    <string name="com_parse_ui_login_dispatch_user_not_logged_in">User not logged in</string>
    <string name="button_log_in_anonymously">Sign Up Later</string>
    <string name="com_parse_ui_invalid_email_toast">E-mail is invalid, please correct it and try again</string>
    <string name="menu_pattern_central">Pattern Central</string>
    <string name="menu_settings">Settings</string>
    <string name="reconnect_button">You are currently disconnected from the Internet. Please reconnect.</string>
    <string name="notifications_prompt">Click here to the roll around in feces until your friends tell you something cool!</string>
    <string name="notifications_message">This is where cucky shitlords send you love!</string>
    <string name="edit_profile_bio">Bio</string>
    <string name="com_parse_ui_group_input_hint">Yecret Key</string>
    <string name="com_parse_ui_no_group_toast">You must include a valid yecret key</string>
    <string name="yeeeet">Yeeeet!!!</string>

</resources>
